<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SmsActivity">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="TP4"
        app:titleTextColor="@android:color/white"
        />

    <!-- Texte princpale -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saisie_d_un_message"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />

    <!-- Champs SMS en saisie -->
    <TextView
        android:id="@+id/labelNumSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_ro"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/etNumSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/saisir_un_num_ro"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelNumSMS"
        app:layout_constraintStart_toEndOf="@+id/labelNumSMS"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/labelMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        app:layout_constraintTop_toBottomOf="@+id/etNumSMS"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp" />


    <EditText
        android:id="@+id/etMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/saisir_votre_message"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelMessage"
        app:layout_constraintStart_toEndOf="@+id/labelMessage"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />


    <!-- Les Boutons -->
    <LinearLayout
        android:id="@+id/layoutButtonsSMS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMessage">

        <Button
            android:id="@+id/btnAnnulerSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/red"
            android:text="@string/annuler"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnValiderSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/valider"
            android:textColor="@android:color/white"
            android:layout_marginStart="16dp"
            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>