<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeoActivity">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="TP4"
        app:titleTextColor="@android:color/white"
        />

    <!-- Texte princpale -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saisie_coordonn_es"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />

    <!-- Champs Geolocalisation en saisie -->
    <TextView
        android:id="@+id/labelLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lattitude"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp" />

    <EditText
        android:id="@+id/etLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/saisir_une_latitude"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelLatitude"
        app:layout_constraintStart_toEndOf="@+id/labelLatitude"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/labelLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        app:layout_constraintTop_toBottomOf="@+id/etLatitude"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp" />


    <EditText
        android:id="@+id/etLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/saisir_une_longitude"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelLongitude"
        app:layout_constraintStart_toEndOf="@+id/labelLongitude"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />


    <!-- Les Boutons -->
    <LinearLayout
        android:id="@+id/layoutButtonsGeo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etLongitude">

        <Button
            android:id="@+id/btnAnnulerGeo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/red"
            android:text="@string/annuler"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnValiderGeo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:text="@string/valider"
            android:textColor="@android:color/white"
            android:layout_marginStart="16dp"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>