<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Fond de l'application -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ulco">
</androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:title="TP4"
        app:titleTextColor="@android:color/white"
        />

    <!-- Texte princpale -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intentions_implicites"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />

    <!-- Les Boutons -->
    <LinearLayout
        android:id="@+id/layoutButtonsCall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_margin="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        >


        <Button
            android:id="@+id/btnAppel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/appeler"
            android:textColor="@android:color/white"
            android:layout_margin="22dp"/>


        <Button
            android:id="@+id/btnSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:text="@string/sms"
            android:textColor="@android:color/white"
            android:layout_margin="22dp"
            />

        <Button
            android:id="@+id/btnMMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/mms"
            android:textColor="@android:color/white"
            android:layout_margin="22dp"/>


        <Button
            android:id="@+id/btnWEB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:text="@string/web"
            android:textColor="@android:color/white"
            android:layout_margin="22dp"
            />

        <Button
            android:id="@+id/btnGEO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/geo"
            android:textColor="@android:color/white"
            android:layout_margin="22dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mouammar_soul_2025_2026_to_dev_mobile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>